# skywatch

./: .env.example  .gitignore  CAMERA_PROOF.md  DEMO.md  LICENSE  README.md  docker-compose.yml
apps/web/: Dockerfile  next.config.js  package-lock.json  package.json  postcss.config.js  tailwind.config.ts
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/app/api/geoip/: route.ts
apps/web/components/: CameraGrid.tsx  CurrentConditions.tsx  EnsembleConfidence.tsx  ForecastPanel.tsx  LocationPicker.tsx
apps/web/lib/: api.ts
demo-site/: index.html
docs/: ARCHITECTURE.md  LEGAL.md  PRIVACY.md  PROVIDERS.md  ROADMAP.md  index.html
docs/cameras/: readings.json
scripts/: dev.sh  train_classifier.py
services/api/: Dockerfile  pyproject.toml  requirements.txt
services/api/app/: __init__.py  config.py  ensemble.py  geolocation.py  main.py  schemas.py
services/api/app/cameras/: __init__.py  base.py  discovery.py  dot_us.py  windy.py
services/api/app/providers/: __init__.py  base.py  metnet_stub.py  nvidia_earth2.py  open_meteo.py  openweathermap.py
services/api/app/routes/: __init__.py  cameras.py  geoip.py  weather.py
services/api/app/vision/: README.md  __init__.py  classifier.py
services/api/tests/: test_ensemble.py  test_open_meteo.py
